--- a/Project_Manager/templates/teams/partial-team_list.html
+++ b/Project_Manager/templates/teams/partial-team_list.html
@@ -2,7 +2,7 @@
 
 {% if teams %}
     {% for team in teams %}
-        <div class="shadow-lg relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 mb-6 transition-all duration-500 col-span-12  xl:p-6  lg:col-span-3 md:col-span-6 ">
+        <div id="card_{{team.id}}" class="shadow-lg relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 mb-6 transition-all duration-500 col-span-12  xl:p-6  lg:col-span-3 md:col-span-6 ">
             <div class="relative mb-6">
                 <a href="">
                     <svg width="46" height="46" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -22,7 +22,7 @@
                     <!-- Выпадающее меню -->
                     <ul tabindex="0" class="dropdown-content menu bg-gray-100 border border-gray-400 shadow-md rounded-lg z-10 w-52 p-2">
                         <li><a class="rounded text-gray-600 hover:bg-gray-200"  onclick="document.getElementById('update_team_modal_{{ team.id }}').showModal()">Редактировать</a></li>
-                        <li><a class="rounded text-red-500 hover:bg-red-500 hover:text-white">Удалить</a></li>
+                        <li><a class="rounded text-red-500 hover:bg-red-500 hover:text-white" hx-delete="{% url 'teams:delete_team' team.id %}" hx-target="#card_{{team.id}}" hx-swap="delete">Удалить</a></li>
                         {% with form=team_forms|dictkey:team.id %}
                             {% include 'includes/update-team-modal.html' %}
                         {% endwith %}
