--- a/Project_Manager/templates/teams/partial-team_list.html
+++ b/Project_Manager/templates/teams/partial-team_list.html
@@ -17,9 +17,9 @@
                     <div tabindex="0" role="button" class="pointer bg-transparent border-none hover:bg-transparent">
                         <img 
                             class="w-[30px] h-auto" 
-                            src="{% static 'img/ellipsis.png' %}" 
+                            src="{% static 'teams/img/ellipsis.png' %}" 
                             alt="Menu"
-                        >
+                        >`
                     </div>
                     
                     <!-- Выпадающее меню -->
@@ -40,7 +40,7 @@
             
             <!-- Footer -->
             <div class="mt-[15px] flex cursor-pointer group relative max-w-max">
-                <img class="w-[1.25rem] h-[1.30rem] mr-1.5 self-center grayscale-[100%] brightness-75" src="{% static 'img/calendar.png' %}">
+                <img class="w-[1.25rem] h-[1.30rem] mr-1.5 self-center grayscale-[100%] brightness-75" src="{% static 'teams/img/calendar.png' %}">
                 <p class="text-zinc-500">{{ team.created_at|date:"d.m.Y" }}</p>
                 <!-- Кастомный тултип -->
                 <span class="absolute -top-10 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs text-center py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">
