--- a/Project_Manager/templates/projects/project_list.html
+++ b/Project_Manager/templates/projects/project_list.html
@@ -3,14 +3,44 @@
 {% block content %}
 
 <div id="content" class="p-6">
-  <!-- Заголовок и кнопка добавления -->
-  <div class="flex justify-between items-center mb-6">
-    <h2 class="text-2xl font-bold text-gray-800">Проекты</h2>
-    <button class="btn bg-blue-600 hover:bg-blue-700 text-white gap-2">
-      <i class="fas fa-plus"></i>
-      Добавить проект
-    </button>
+  <div class="flex items-center p-4 mb-1">
+    <!-- Левая часть: кнопка -->
+
+    <div class="flex-none w-16 text-3xl font-semibold text-black">Проекты</div>
+
+    <!-- Центральная часть: строка поиска по центру -->
+    <div class="flex-1 flex justify-center">
+        <div class="relative max-w-2xl w-full">
+            <input 
+                type="text" 
+                name="search"
+                placeholder="Поиск..." 
+                class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
+            />
+            <svg 
+                class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
+                fill="none" 
+                viewBox="0 0 24 24" 
+                stroke="currentColor"
+            >
+                <path 
+                    stroke-linecap="round" 
+                    stroke-linejoin="round" 
+                    stroke-width="2" 
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" 
+                />
+            </svg>
+        </div>
+    </div>
+
+    <div class="flex-none">
+      <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap">
+          Добавить проект
+      </button>
+    </div>
+
   </div>
+
 
   <!-- Контейнер списка -->
   <div class="space-y-3">
