--- a/Project_Manager/templates/projects/project_list.html
+++ b/Project_Manager/templates/projects/project_list.html
@@ -6,8 +6,12 @@
   <div class="flex items-center p-4 mb-1">
     <!-- Левая часть: кнопка -->
 
-    <div class="flex-none w-16 text-3xl font-semibold text-black">Проекты</div>
-
+    <div class="flex items-center gap-x-4 text-3xl font-semibold text-black">
+      <a href="{% url 'teams:team_conf' team.id %}" class="p-2 rounded hover:bg-gray-200 text-gray-800">
+        <i class="fas fa-cog text-gray-700"></i>
+      </a>
+      <p>Проекты</p>
+    </div>
     <!-- Центральная часть: строка поиска по центру -->
     <div class="flex-1 flex justify-center">
         <div class="relative max-w-2xl w-full">
