--- a/Project_Manager/templates/teams/includes/setting.html
+++ b/Project_Manager/templates/teams/includes/setting.html
@@ -1,10 +1,36 @@
 {% extends 'teams/team-conf.html' %}
 
 {% block configuration_content %}
+<div class="p-6 max-w-2xl mx-auto">
+    <form action="" method="post" class="space-y-6">
+        {% csrf_token %}
+        
+        {% for field in form %}
+        <div class="form-control">
+            <label for="{{ field.id_for_label }}" class="label">
+                <span class="label-text text-gray-800 text-lg font-medium">{{ field.label }}</span>
+            </label>
+            
+            {{ field }}
+            
+            {% if field.help_text %}
+            <label class="label">
+                <span class="label-text-alt">{{ field.help_text }}</span>
+            </label>
+            {% endif %}
+            
+            {% if field.errors %}
+            <div class="text-error text-sm mt-1">
+                {{ field.errors }}
+            </div>
+            {% endif %}
+        </div>
+        {% endfor %}
 
-<form action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-</form>
-
+        <div class="flex justify-end space-x-4 pt-4">
+            <button type="" class="text-black bg-white hover:text-white btn">Назад</button>
+            <button type="submit" class="btn btn-primary btn-outline">Сохранить</button>
+        </div>
+    </form>
+</div>
 {% endblock configuration_content %}
