--- a/Project_Manager/templates/includes/header-team-conf.html
+++ b/Project_Manager/templates/includes/header-team-conf.html
@@ -6,6 +6,12 @@
         <h2 class="text-xl font-semibold text-gray-800">{{ team.name}}</h2>
         <span class="text-sm text-gray-500">Владелец: {{ team.author }}</span>
     </div>
+
+    <div>
+        <a href="{% url 'teams:projects:project_list' team.id %}" class="inline-block px-5 py-2 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-blue-300 transition-all duration-200 font-medium">
+            Вернуться к проектам
+        </a>
+    </div>
     
     <!-- Правая часть шапки - элементы управления -->
     <div class="flex items-center space-x-4">
