--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -9,6 +9,7 @@
                 <th class="w-10 py-3 px-3 text-center font-semibold">#</th>
                 <th class="py-3 px-6 text-left font-semibold">Пользователь</th>
                 <th class="py-3 px-6 text-left font-semibold">Почта</th>
+                <th class="py-3 px-6 text-left font-semibold">Учасвтсвует в проектах</th>
                 <th class="py-3 px-6 text-left font-semibold">Роль</th>
                 <th class="py-3 px-6 text-left font-semibold">Дата присоединения</th>
                 <th class="w-10 py-3 px-6 text-left font-semibold"></th>
@@ -20,6 +21,7 @@
                 <td class="w-10 py-1 px-3 text-center whitespace-nowrap">{{ forloop.counter }}</td>
                 <td class="py-1 px-6 text-left font-bold">{{ user.username }}</td>
                 <td class="py-1 px-6 text-left">{{ user.email|default:"---" }}</td>
+                <td class="py-1 px-6 text-left">Кол-во проектов</td>
                 <td class="py-1 px-6 text-left">
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="btn m-1 bg-gray-100 text-gray-800 rounded-2xl border-gray-400 hover:bg-gray-50 hover:border-sky-600 shadow-md">Гость <i class='fas fa-angle-down mt-1'></i></div>
