--- a/Project_Manager/projects/templates/projects/includes/custom-image-field.html
+++ b/Project_Manager/projects/templates/projects/includes/custom-image-field.html
@@ -1,21 +1,18 @@
 
 <style>
-     #image-div:hover {
-        opacity: 0.7; 
-    }
-    #image-div:hover #icon-download{
-        display: block;
-    }
-    #icon-download:hover{
-        color: #575757;
-    }
+    #image-div:hover {
+       opacity: 0.7; 
+   }
+   #image-div:hover #icon-download{
+       display: block;
+   }
 </style>
 
 <div id="image-preview-container" class="mt-2">
-    <div id="image-div" class="w-[4.2rem] h-[4.2rem] relative bg-sky-400 rounded-2xl flex items-center justify-center font-bold text-white cursor-pointer">
-        <img id="image-preview" class="w-[4.2rem] h-[4.2rem] z-1 absolute bg-sky-400 rounded-2xl flex items-center justify-center font-bold text-white cursor-pointer" />
-        
-        <i id="icon-download" class="hidden fas fa-download scale-150"></i>
-        <input class="absolute opacity-0 cursor-pointer" type="file" name="image" accept="image/*" id="id_image">
-    </div>
+   <div id="image-div" class="w-[4.2rem] h-[4.2rem] relative bg-sky-400 rounded-2xl flex items-center justify-center font-bold text-white cursor-pointer">
+       <img id="image-preview" class="w-[4.2rem] h-[4.2rem] z-1 absolute rounded-2xl cursor-pointer" />
+       
+       <i id="icon-download" class="hidden fas fa-download scale-150"></i>
+       <input class="absolute opacity-0 cursor-pointer" type="file" name="image" accept="image/*" id="id_image">
+   </div>
 </div>
