--- a/Project_Manager/templates/projects/includes/add-project-modal.html
+++ b/Project_Manager/templates/projects/includes/add-project-modal.html
@@ -4,9 +4,10 @@
     <div class="modal-box bg-gray-100 max-w-md p-6 rounded-lg shadow-xl">
         <button class="btn btn-sm btn-circle btn-ghost absolute right-3 top-3 text-gray-600 hover:text-gray-900 hover:bg-gray-200 transition-colors" onclick="add_project_modal.close();">✕</button>
       <h3 class="text-2xl font-bold text-gray-800 mb-4">Создание проекта</h3>
-      <form action="" method="post" id="ss1" enctype="multipart/form-data">
+      <form action="{% url 'teams:projects:create_project' %}" method="post" id="ss1" enctype="multipart/form-data">
         {% csrf_token %}
-        
+        <input type="hidden" name="team_id" value="{{ team.id }}">
+
         {% for field in form %}
         <div class="flex flex-col gap-4">
             <div class="form-control w-full">
@@ -35,7 +36,6 @@
         const fileInput = modal.querySelector('input[name="image"]');
         const previewImage = modal.querySelector('#image-preview');
 
-        // Убедимся, что не вешаем обработчик дважды
         if (!fileInput.hasAttribute('data-bound')) {
             fileInput.addEventListener('change', function (e) {
                 const file = e.target.files[0];
