--- a/Project_Manager/templates/projects/project_list.html
+++ b/Project_Manager/templates/projects/project_list.html
@@ -42,7 +42,7 @@
 
     <div class="flex-none">
       <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="add_project_modal.showModal();">
-          Добавить проект
+          Создать проект
       </button>
       {% include 'projects/includes/add-project-modal.html' %}
     </div>
