--- a/Project_Manager/templates/projects/s.html
+++ b/Project_Manager/templates/projects/s.html
@@ -15,7 +15,30 @@
               <h3 class="text-lg font-semibold text-gray-800 truncate">{{ project.name }}</h3>
               <p class="text-gray-500 text-sm line-clamp-1">{{ project.description }}</p>
             </div>
-            <span class="px-3 py-1 rounded-full text-lime-700 text-xs font-medium bg-green-100 border border-gray-500">{{ project.status }}</span>
+            
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="px-3 py-1 rounded-lg {{project.status_text}} text-sm font-medium {{project.status_color}} border border-gray-400">{{ project.status }} <i class='fas fa-angle-down mt-1'></i></div>
+              <ul tabindex="0" class="dropdown-content menu text-gray-600 bg-white border border-gray-300 rounded-box z-[1] w-48 p-2 shadow-sm">
+                <li>
+                  <a class="flex items-center gap-2">
+                    <span class="w-2.5 h-2.5 rounded-full bg-green-500"></span>
+                    {{ status_choices.IN_WORK }}
+                  </a>
+                </li>
+                <li>
+                  <a class="flex items-center gap-2">
+                    <span class="w-2.5 h-2.5 rounded-full bg-yellow-400"></span>
+                    {{ status_choices.STOPPED }}
+                  </a>
+                </li>
+                <li>
+                  <a class="flex items-center gap-2">
+                    <span class="w-2.5 h-2.5 rounded-full bg-red-400"></span>
+                    {{ status_choices.COMPLETED }}
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
           
           <div class="flex flex-wrap items-center gap-x-4 gap-y-2 mt-2 text-sm text-gray-500">
