--- a/Project_Manager/templates/projects/s.html
+++ b/Project_Manager/templates/projects/s.html
@@ -1,7 +1,7 @@
 
 
     {% for project in projects %}
-    <div class="bg-gray-50 border border-gray-200 rounded-lg hover:border-blue-300 transition-colors">
+    <div id="card_{{project.id}}" class="bg-gray-50 border border-gray-200 rounded-lg hover:border-blue-300 transition-colors">
       <div class="flex flex-col sm:flex-row items-start sm:items-center gap-4 p-4">
         <!-- Изображение/иконка -->
           {% if project.image %}
@@ -64,13 +64,13 @@
         </div>
         
         <!-- Кнопки действий -->
-        <div class="flex gap-2 sm:ml-auto mt-2 sm:mt-0">
-          <button class="px-3 py-1.5 text-sm font-medium rounded-md border border-blue-600 text-blue-600 hover:bg-blue-50 transition-colors">
+        <div class="flex gap-4 sm:ml-auto mt-2 sm:mt-0">
+          <button class="px-4 py-1.5 text-sm font-medium rounded-md border border-blue-600 text-blue-600 hover:bg-blue-50 transition-colors">
             Открыть
           </button>
-          <button class="p-1.5 text-gray-500 hover:text-red-500 hover:bg-red-50 rounded-md transition-colors">
+          <a hx-delete="{% url 'teams:projects:delete_project' project.id %}" hx-target="#card_{{project.id}}" hx-swap="delete" class="p-1.5 text-gray-500 hover:text-red-500 hover:bg-red-50 rounded-md transition-colors cursor-pointer">
             <i class="fas fa-trash-alt"></i>
-          </button>
+          </a>
         </div>
       </div>
     </div>
