--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -2,23 +2,65 @@
 
 {% block configuration_content %}
 
-<div class="p-6 mx-auto">
-    <table class="table w-full">
-        <thead class="bg-gray-50">
-            <tr class="text-gray-600 uppercase text-sm leading-normal">
-                <th class="w-10 py-3 px-3 text-center font-semibold">#</th>
-                <th class="py-3 px-6 text-left font-semibold">Пользователь</th>
-                <th class="py-3 px-6 text-left font-semibold">Почта</th>
-                <th class="py-3 px-6 text-left font-semibold">Учасвтсвует в проектах</th>
-                <th class="py-3 px-6 text-left font-semibold">Роль</th>
-                <th class="py-3 px-6 text-left font-semibold">Дата присоединения</th>
-                <th class="w-10 py-3 px-6 text-left font-semibold"></th>
-            </tr>
-        </thead>
-        <tbody class="text-gray-600 text-sm font-light">
-                {% include 'teams/includes/team_members_list.html' %}
-        </tbody>
-    </table>
-</div>
+<div>
 
+    <div class="flex items-center p-4 mb-1">
+        <div class="flex items-center ml-2 gap-x-4 text-3xl font-semibold text-black">
+            <p>Участники команды</p>
+        </div>
+        <!-- Центральная часть: строка поиска по центру -->
+        <div class="flex-1 flex justify-center">
+            <div class="relative max-w-2xl w-full">
+                <input 
+                    type="text" 
+                    name="input_search"
+                    placeholder="Поиск..." 
+                    class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
+                    hx-get=""
+                    hx-trigger="keyup delay:200ms"
+                    hx-target=""
+                />
+                <svg 
+                    class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
+                    fill="none" 
+                    viewBox="0 0 24 24" 
+                    stroke="currentColor"
+                >
+                    <path 
+                        stroke-linecap="round" 
+                        stroke-linejoin="round" 
+                        stroke-width="2" 
+                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" 
+                    />
+                </svg>
+            </div>
+        </div>
+
+        <div class="flex-none">
+            <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="">
+                Добавить участников
+            </button>
+        </div>
+    </div>
+    
+    <div class="p-6 mx-auto">
+        <table class="table w-full">
+            <thead class="bg-gray-50">
+                <tr class="text-gray-600 uppercase text-sm leading-normal">
+                    <th class="w-10 py-3 px-3 text-center font-semibold">#</th>
+                    <th class="py-3 px-6 text-left font-semibold">Пользователь</th>
+                    <th class="py-3 px-6 text-left font-semibold">Почта</th>
+                    <th class="py-3 px-6 text-left font-semibold">Учасвтсвует в проектах</th>
+                    <th class="py-3 px-6 text-left font-semibold">Роль</th>
+                    <th class="py-3 px-6 text-left font-semibold">Дата присоединения</th>
+                    <th class="w-10 py-3 px-6 text-left font-semibold"></th>
+                </tr>
+            </thead>
+            <tbody class="text-gray-600 text-sm font-light">
+                    {% include 'teams/includes/team_members_list.html' %}
+            </tbody>
+        </table>
+    </div>
+
+</div>
 {% endblock configuration_content %}
